Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

$Id:$

8/4/2009
  LUCENE-1770: Add EnwikiQueryMaker (Mark Miller)

8/04/2009
  LUCENE-1773: Add FastVectorHighlighter tasks.  (Koji Sekiguchi via
  Mike McCandless)

8/03/2009
  LUCENE-1778: Add support for log.step setting per task type. Perviously, if
  you included a log.step line in the .alg file, it had been applied to all
  tasks. Now, you can include a log.step.AddDoc, or log.step.DeleteDoc (for 
  example) to control logging for just these tasks. If you want to ommit logging
  for any other task, include log.step=-1. The syntax is "log.step." together
  with the Task's 'short' name (i.e., without the 'Task' part).
  (Shai Erera via Mark Miller)

7/24/2009
  LUCENE-1595: Deprecate LineDocMaker and EnwikiDocMaker in favor of
  using DocMaker directly, with content.source = LineDocSource or
  EnwikiContentSource.  NOTE: with this change, the "id" field from
  the Wikipedia XML export is now indexed as the "docname" field
  (previously it was indexed as "docid").  Additionaly, the
  SearchWithSort task now accepts all types that SortField can accept
  and no longer falls back to SortField.AUTO, which has been
  deprecated. (Mike McCandless)

7/20/2009
  LUCENE-1755: Fix WriteLineDocTask to output a document if it contains either 
  a title or body (or both).  (Shai Erera via Mark Miller)

7/14/2009
  LUCENE-1725: Fix the example Sort algorithm - auto is now deprecated and no longer works
  with Benchmark. Benchmark will now throw an exception if you specify sort fields without
  a type. The example sort algorithm is now typed.  (Mark Miller)

7/6/2009
  LUCENE-1730: Fix TrecContentSource to use ISO-8859-1 when reading the TREC files, 
  unless a different encoding is specified. Additionally, ContentSource now supports 
  a content.source.encoding parameter in the configuration file. 
  (Shai Erera via Mark Miller)

6/26/2009