@@ -125,21 +125,6 @@ name|search
 operator|.
 name|highlight
 operator|.
-name|InvalidTokenOffsetsException
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|highlight
-operator|.
 name|QueryScorer
 import|;
 end_import
@@ -186,15 +171,6 @@ operator|.
 name|highlight
 operator|.
 name|TokenSources
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
 import|;
 end_import
 begin_import
@@ -462,27 +438,6 @@ literal|0
 return|;
 block|}
 block|}
-return|;
-block|}
-comment|/**    * @deprecated    */
-DECL|method|isMergeContiguousFragments
-specifier|public
-name|boolean
-name|isMergeContiguousFragments
-parameter_list|()
-block|{
-return|return
-name|mergeContiguous
-return|;
-block|}
-DECL|method|maxNumFragments
-specifier|public
-name|int
-name|maxNumFragments
-parameter_list|()
-block|{
-return|return
-name|maxFrags
 return|;
 block|}
 DECL|method|getFieldsToHighlight
