@@ -54,6 +54,34 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|Analyzer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|highlight
+operator|.
+name|SimpleHTMLFormatter
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|highlight
@@ -88,7 +116,35 @@ name|search
 operator|.
 name|highlight
 operator|.
-name|InvalidTokenOffsetsException
+name|QueryScorer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|highlight
+operator|.
+name|TokenSources
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Query
 import|;
 end_import
 begin_import
@@ -206,31 +262,79 @@ return|return
 name|document
 return|;
 block|}
-DECL|method|doHighlight
-specifier|protected
+DECL|method|getBenchmarkHighlighter
+specifier|public
+name|BenchmarkHighlighter
+name|getBenchmarkHighlighter
+parameter_list|(
+name|Query
+name|q
+parameter_list|)
+block|{
+name|highlighter
+operator|=
+operator|new
+name|Highlighter
+argument_list|(
+operator|new
+name|SimpleHTMLFormatter
+argument_list|()
+argument_list|,
+operator|new
+name|QueryScorer
+argument_list|(
+name|q
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|BenchmarkHighlighter
+argument_list|()
+block|{
+specifier|public
 name|int
 name|doHighlight
 parameter_list|(
-name|TokenStream
-name|ts
+name|IndexReader
+name|reader
+parameter_list|,
+name|int
+name|doc
+parameter_list|,
+name|String
+name|field
+parameter_list|,
+name|Document
+name|document
+parameter_list|,
+name|Analyzer
+name|analyzer
 parameter_list|,
 name|String
 name|text
-parameter_list|,
-name|Highlighter
-name|highlighter
-parameter_list|,
-name|boolean
-name|mergeContiguous
-parameter_list|,
-name|int
-name|maxFragments
 parameter_list|)
 throws|throws
-name|IOException
-throws|,
-name|InvalidTokenOffsetsException
+name|Exception
 block|{
+name|TokenStream
+name|ts
+init|=
+name|TokenSources
+operator|.
+name|getAnyTokenStream
+argument_list|(
+name|reader
+argument_list|,
+name|doc
+argument_list|,
+name|field
+argument_list|,
+name|document
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
 name|TextFragment
 index|[]
 name|frag
@@ -245,7 +349,7 @@ name|text
 argument_list|,
 name|mergeContiguous
 argument_list|,
-name|maxFragments
+name|maxFrags
 argument_list|)
 decl_stmt|;
 name|numHighlightedResults
@@ -270,6 +374,9 @@ operator|.
 name|length
 else|:
 literal|0
+return|;
+block|}
+block|}
 return|;
 block|}
 block|}
